<resources>
    <string name="app_name">Cesistant</string>
    <string name="nrp">NRP</string>
    <string name="cesistant">CESISTANT</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Belum mendaftar, Daftar Disini</string>
    <string name="kompetisi">Kompetisi</string>
    <string name="beasiswa">Beasiswa</string>
    <string name="ekskursi">Ekskursi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gambar_belum_diambil">Gambar belum diambil</string>
    <string name="daftarr">Daftar</string>
    <string name="foto_ktm">Foto KTM</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="daftar_sini">Daftar sini</string>
    <string name="belum_mendaftar">Belum mendaftar?</string>
</resources>
