<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:background="@drawable/animation_list"
    tools:context=".Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cesistant"
        android:textSize="15pt"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:paddingTop="20pt"
        android:id="@+id/title"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:hint="@string/nrp"
        android:id="@+id/in_nrp"
        android:paddingTop="25pt"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:inputType="number"
        android:textColorHint="#FFFF" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/in_nrp"
        android:id="@+id/in_pass"
        android:hint="@string/password"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:paddingTop="25pt"
        android:inputType="textPassword"
        android:textColorHint="#FFFF" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/in_pass"
        android:layout_marginTop="10pt"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:id="@+id/btn_login"
        android:onClick="klik_login"
        android:hint="@string/masuk"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/textDaftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/belum_mendaftar"
        android:textColor="#FFFF"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/btn_daftar"
        android:layout_below="@id/textDaftar"
        android:text="@string/daftar_sini"
        android:textSize="15sp"
        android:textColor="#FFFF"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>